trying to fix iphone 11 viewport issue with show page stretching images

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -437,6 +437,7 @@ footer {
     max-height: 550px;
     max-width: 220px;
     height: 100%;
+    max-height: 100%;
     padding: 40px;
     border-radius: 5px;
     margin-right: 8px;
